--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Mont Serrat', sans-serif;
+  text-decoration: none;
 }
 
 body {
@@ -73,6 +74,36 @@ header h1 {
   margin-bottom: 0;
 }
 
-header  h1 {
+header  a {
+  display: inline-block; padding: 14px 50px; font-size: 18px; margin-top: 30px;
+
+}
+
+header a:hover {
+  text-decoration: none;
+}
+
+.link-left {
+  font-weight: 700;
+  color: #fff;
+  background-color:#43978C;
+}
+
+.link-left:hover {
+  color: #fff;
+}
+
+.link-right {
+  color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.2) inset;
+  line-height: 1.39;
+  transition: color 0.4s ease, background-color 0.4s ease;
+  font-weight: 700;
+}
+
+.link-right:hover {
+  color: #fff;
+  box-shadow: none;
+  background-color: rgba(255, 255, 255, 0.2);
 
 }
