--- a/style.css
+++ b/style.css
@@ -206,3 +206,55 @@ header a:hover {
 .image {
   padding-top: 20px;
 }
+
+.center-video {
+  text-align: center;
+}
+
+
+.container button {
+ background-color: rgb(67, 151, 140);
+ border-color: white;
+ border-radius: 0;
+ width: 300px;
+ margin-left: 45px;
+ font-weight: bold;
+}
+.background-footer {
+ background: #F4F5F7
+;
+ text-align: center;
+}.last-section h3 {
+ font-size: 30px;
+ font-weight: bold;
+ text-transform: uppercase;
+ padding: 20px 0;
+}
+
+.title h4, p {
+  font-size: 13px;
+  display: inline-block;
+}
+
+.padding-last {
+  padding-top: 30px;
+  text-align: center;
+}
+.padding-last h4 {
+    font-weight: bold;
+
+}
+
+.black a {
+  color: #3b3b3b !important;
+
+}
+
+
+.copy {
+  font-size: 10px;
+  position: relative;
+  right: 80px; top: 30px;
+  color: #a6a6a6;
+  padding-bottom: 20px;
+}
